[package]
name = "fabryk-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Admin CLI for Fabryk knowledge fabric"

[[bin]]
name = "fabryk"
path = "src/main.rs"

[dependencies]
fabryk-core = { path = "../fabryk-core" }
fabryk-client = { path = "../fabryk-client" }

# Async runtime
tokio.workspace = true

# CLI framework
clap.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Configuration
confyg.workspace = true

# Logging
twyg.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
