[package]
name = "fabryk-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI framework for Fabryk-based applications"

[dependencies]
fabryk-core = { version = "0.1.3", path = "../fabryk-core" }
fabryk-graph = { version = "0.1.3", path = "../fabryk-graph" }
fabryk-content = { version = "0.1.3", path = "../fabryk-content" }
fabryk-vector = { version = "0.1.3", path = "../fabryk-vector", optional = true, features = ["vector-fastembed"] }

# CLI
clap = { workspace = true }

# Async
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
confyg = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
vector-fastembed = ["dep:fabryk-vector"]
