[package]
name = "fabryk-content"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Markdown parsing, frontmatter extraction, and content utilities for Fabryk"

[dependencies]
fabryk-core = { path = "../fabryk-core" }

# Markdown parsing
pulldown-cmark = { workspace = true }

# Frontmatter
serde_yaml = { workspace = true }

# Serialization
serde = { workspace = true }

# Regex for content extraction
regex = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
