[package]
name = "fabryk-content"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Markdown parsing, frontmatter extraction, and content utilities for Fabryk"

[dependencies]
fabryk-core = { version = "0.5.0", path = "../fabryk-core" }

# Markdown parsing
pulldown-cmark = { workspace = true }

# Frontmatter
yaml_serde = { workspace = true }

# Serialization
serde = { workspace = true }

# Regex for content extraction
regex = { workspace = true }

# Fuzzy string matching
strsim = { workspace = true }

# Async filesystem operations
tokio = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
