[package]
name = "fabryk-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types, traits, and errors for Fabryk knowledge fabric"

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

# Async trait support
async-trait.workspace = true

[dev-dependencies]
proptest.workspace = true
