[package]
name = "fabryk-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types, traits, errors, and utilities for the Fabryk knowledge fabric"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
yaml_serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

# File operations
glob = { workspace = true }
shellexpand = { workspace = true }
dirs = { workspace = true }
async-walkdir = { workspace = true }

# Logging
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
