[package]
name = "fabryk-fts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Full-text search infrastructure for Fabryk (Tantivy backend)"

[features]
default = []
fts-tantivy = ["dep:tantivy", "dep:stop-words"]

[dependencies]
fabryk-core = { path = "../fabryk-core" }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
log = { workspace = true }

# File operations (for freshness hashing)
async-walkdir = { workspace = true }

# Time (for freshness timestamps)
chrono = { workspace = true }

# Full-text search (feature-gated)
tantivy = { workspace = true, optional = true }
stop-words = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
