[package]
name = "fabryk-gcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GCP credential detection and utilities for the Fabryk ecosystem"

[dependencies]
dirs = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
